--- a/config.json
+++ b/config.json
@@ -11,7 +11,8 @@
 
         "minimum": 500,
         "maximum": 1500,
-        "bonus": 1000
+        "bonus": 1000,
+        "maxStreak": 5
     },
 
     "leaderboardValues": {
